<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="projects_title">My Nanodegree Apps!</string>
    <string name="project_0">My App Portfolio</string>
    <string name="project_1_2">Popular movies</string>
    <string name="project_3">Super Duo</string>
    <string name="project_4">Build It Bigger</string>
    <string name="project_5">Make Your App Material</string>
    <string name="project_6">Go Ubiquitous</string>
    <string name="project_7_8_capstone">Capstone: MY OWN APP</string>
</resources>
